<resources>
    <string name="app_name">&TERMUX_DISPLAY_APP_NAME; </string>
    <string name="plugin_info">&TERMUX_DISPLAY_APP_NAME; is a plugin app for the &TERMUX_APP_NAME;
        app.
        \n\nCheck &TERMUX_APP_NAME; app github %1$s and &TERMUX_DISPLAY_APP_NAME; app github %2$s for more info.</string>
    <string name="msg_storage_permission_not_granted_warning">The storage permission must be granted
        to &TERMUX_DISPLAY_APP_NAME; app to...</string>
    <string name="action_grant_storage_permission">Grant Storage Permission</string>
    <string name="msg_battery_optimization_not_disabled_warning">Android battery optimizations
        should be disabled for the &TERMUX_DISPLAY_APP_NAME; app so that…
        Check https://developer.android.com/about/versions/oreo/background for more info and
        https://developer.android.com/guide/components/foreground-services#background-start-restrictions
        for more info.

        \n\nAlso check https://dontkillmyapp.com for info on vendor specific app killers.
        Depending on vendor you may need to do things like enable AutoStart, disable DuraSpeed,
        enable `Display pop-up windows while running in the background` for the app.</string>
    <string name="action_disable_battery_optimizations">Disable Battery Optimizations</string>
    <string name="msg_display_over_other_apps_permission_not_granted_warning">The display over other
        apps permission should be granted to &TERMUX_DISPLAY_APP_NAME; app for starting foreground
        activities from background. Check https://developer.android.com/guide/components/activities/background-starts
        for more info.
    </string>
    <string name="action_grant_display_over_other_apps_permission">Grant Draw Over Apps Permission</string>
    <string name="action_already_granted">Already Granted</string>
    <string name="action_already_disabled">Already Disabled</string>
    <string name="not_connected">Not connected</string>
    <string name="help_button_text">   Help   </string>
    <string name="preferences_button_text">   Preferences   </string>
    <string name="extra_keys_config_desc">Here you can set value of extra-keys variable like in Termux app (read <a href="http://wiki.termux.com/wiki/Touch_Keyboard#Extra_Keys_Row">this</a>) and more (e.g. META).</string>
    <string name="pref_main">Preferences</string>
    <string name="pref_output">Output</string>
    <string name="pref_pointer">Pointer</string>
    <string name="pref_kbd">Keyboard</string>
    <string name="pref_other">Other</string>
    <string name="pref_version">Version</string>
    <string name="pref_ekbar">Extra key bar preferences</string>
    <string name="pref_userActions">Response to user actions</string>
    <string name="pref_previous_menu">Previous menu</string>
    <string name="pref_displayResolutionMode">Display resolution mode</string>
    <string name="pref_displayScale">Display scale, %</string>
    <string name="pref_displayResolutionExact">Display resolution</string>
    <string name="pref_displayResolutionCustom">Display resolution</string>
    <string name="pref_adjustResolution">Adjust the set resolution to fit screen orientation</string>
    <string name="pref_displayStretch">Stretch to fit display</string>
    <string name="pref_Reseed">Reseed screen while soft keyboard is open</string>
    <string name="pref_Reseed_summary">The screen size will be adjusted while Soft Keyboard is open.</string>
    <string name="pref_PIP">PIP mode</string>
    <string name="pref_PIP_summary">Show app in picture-in-picture mode when home button or recents button is pressed</string>
    <string name="pref_fullscreen">Fullscreen</string>
    <string name="pref_fullscreen_summary">Toggle immersive mode in your device display</string>
    <string name="pref_forceOrientation">Screen orientation</string>
    <string name="pref_hideCutout">Hide display cutout (if any)</string>
    <string name="pref_keepScreenOn">Keep Screen On</string>
    <string name="pref_touchMode">Touchscreen input mode</string>
    <string name="pref_scaleTouchpad">Apply display scale factor to touchpad</string>
    <string name="pref_showStylusClickOverride">Show stylus click options</string>
    <string name="pref_showStylusClickOverride_summary">Stylus touch override, left, middle or right click (stylus only)</string>
    <string name="pref_stylusIsMouse">Enable stylus mouse mode</string>
    <string name="pref_stylusIsMouse_summary">Make your stylus work like a mouse. When activated, stylus will only move the cursor and send mouse clicks, ignoring pressure, angle, and tilt.</string>
    <string name="pref_stylusButtonContactModifierMode">Stylus button contact modifier mode</string>
    <string name="pref_stylusButtonContactModifierMode_summary">Enable this option to send right or middle mouse buttons only when stylus touches the screen while the button is pressed.</string>
    <string name="pref_showMouseHelper">Show mouse click helper overlay</string>
    <string name="pref_showMouseHelper_summary">Onscreen mouse buttons usable with touchpad</string>
    <string name="pref_pointerCapture">Capture external pointer devices when possible</string>
    <string name="pref_pointerCapture_summary">Intercept all hardware pointer events. Pointer is back to Android after pressing Escape key.</string>
    <string name="pref_transformCapturedPointer">Transform captured pointer movements</string>
    <string name="pref_capturedPointerSpeedFactor">Captured pointer speed factor, %</string>
    <string name="pref_tapToMove">Enable tap-to-move for touchpads</string>
    <string name="pref_showAdditionalKbd">Show additional keyboard</string>
    <string name="pref_showAdditionalKbd_summary">Show keyboard with additional keys.</string>
    <string name="pref_showIMEWhileExternalConnected">Show IME with external keyboard</string>
    <string name="pref_showIMEWhileExternalConnected_summary">Show software keyboard while hardware keyboard is connected.</string>
    <string name="pref_preferScancodes">Prefer scancodes when possible</string>
    <string name="pref_preferScancodes_summary">Let X server handle hardware keyboard layout (with DE settings or setxkbmap).</string>
    <string name="pref_hardwareKbdScancodesWorkaround">Hardware keyboard scancodes workaround</string>
    <string name="pref_hardwareKbdScancodesWorkaround_summary">Fixes scancodes on some devices. Might cause problems with multiple layouts.</string>
    <string name="pref_dexMetaKeyCapture">Intercept system shortcuts</string>
    <string name="pref_dexMetaKeyCapture_summary">Samsung Dex only. Allows interception of &quot;Alt+F4&quot;, &quot;Meta+D&quot;, &quot;Meta+E&quot;, etc.</string>
    <string name="pref_enableAccessibilityService">Enable Accessibility service for intercepting system shortcuts manually.</string>
    <string name="pref_enableAccessibilityService_summary">Open Accessibility settings.</string>
    <string name="pref_enableAccessibilityServiceAutomatically">Enable Accessibility service for intercepting system shortcuts automatically.</string>
    <string name="pref_enableAccessibilityServiceAutomatically_summary">Requires WRITE_SECURE_SETTINGS permission.</string>
    <string name="pref_pauseKeyInterceptingWithEsc">Pause key intercepting with Esc key</string>
    <string name="pref_filterOutWinkey">Filter out intercepted Win (Meta/Mod4) key.</string>
    <string name="pref_filterOutWinkey_summary">Allows you to use Dex shortcuts while intercepting. Requires Accessibility service to work.</string>
    <string name="pref_enforceCharBasedInput">Enforce char based input</string>
    <string name="pref_enforceCharBasedInput_summary">Suppresses suggestions, predictive typing and CJK languages</string>
    <string name="pref_clipboardEnable">Clipboard sharing</string>
    <string name="pref_requestNotificationPermission">Request notification permission</string>
    <string name="pref_xrMode">Meta Oculus XR mode</string>
    <string name="pref_configureResponseToUserActions">Configure response to user actions</string>
    <string name="pref_storeSecondaryDisplayPreferencesSeparately">Store preferences for secondary displays separately</string>
    <string name="pref_storeSecondaryDisplayPreferencesSeparately_summary">Open this screen on display you want to configure</string>
    <string name="pref_adjustHeightForEK">Adjust display height for extra keys bar</string>
    <string name="pref_adjustHeightForEK_summary">May cause screen flickering during toggling EK bar.</string>
    <string name="pref_useTermuxEKBarBehaviour">Deactivate special keys on additional key bar after each keypress</string>
    <string name="pref_useTermuxEKBarBehaviour_summary">Use long-tap to lock special keys</string>
    <string name="pref_opacityEKBar">Opacity of extra keys bar, %</string>
    <string name="pref_extra_keys_config">Extra keys config</string>
    <string name="pref_swipeUpAction">Three finger swipe up</string>
    <string name="pref_swipeDownAction">Three finger swipe down</string>
    <string name="pref_volumeUpAction">Volume up</string>
    <string name="pref_volumeDownAction">Volume down</string>
    <string name="pref_backButtonAction">Back button</string>
    <string name="pref_notificationTapAction">Notification tap</string>
    <string name="pref_notificationButton0Action">Notification first button</string>
    <string name="pref_notificationButton1Action">Notification second button</string>
    <string name="pref_mediaKeysAction">Media keys</string>
    <string name="pref_summary_requiresExactOrCustom">Requires "display resolution mode" to be "exact" or "custom"</string>
    <string name="input_controls">Input Controls</string>
    <string name="no_items_to_display">No items to display</string>
    <string name="keyboard">Keyboard</string>
    <string name="toggle_fullscreen">Toggle Fullscreen</string>
    <string name="exit">Exit</string>
    <string name="scale">Scale</string>
    <string name="shape">Shape</string>
    <string name="type">Type</string>
    <string name="binding_up">Binding Up</string>
    <string name="binding_right">Binding Right</string>
    <string name="binding_down">Binding Down</string>
    <string name="binding_left">Binding Left</string>
    <string name="toggle_switch">Toggle Switch</string>
    <string name="none">None</string>
    <string name="custom_text">Custom Text</string>
    <string name="icon">Icon</string>
    <string name="touchpad_help">Touchpad Help</string>
    <string name="touchpad_help_mouse_left_click_title">Mouse Left-Click</string>
    <string name="touchpad_help_mouse_left_click_description">Short tap with one finger</string>
    <string name="touchpad_help_mouse_right_click_title">Mouse Right-Click</string>
    <string name="touchpad_help_mouse_right_click_description">Tap with one finger and short tap with another finger</string>
    <string name="touchpad_help_mouse_scroll_wheel_title">Mouse Scroll Wheel</string>
    <string name="touchpad_help_mouse_scroll_wheel_description">Two fingers tap and move</string>
    <string name="touchpad_help_main_menu_title">Main Menu</string>
    <string name="touchpad_help_main_menu_description">Four fingers tap</string>
    <string name="range">Range</string>
    <string name="drive_c">Drive C:</string>
    <string name="cache">Cache</string>
    <string name="total">Total</string>
    <string name="estimated_used_space">Estimated Used Space</string>
    <string name="task_manager">Task Manager</string>
    <string name="process_name">Process Name</string>
    <string name="pid">PID</string>
    <string name="memory">Memory</string>
    <string name="orientation">Orientation</string>
    <string name="horizontal">Horizontal</string>
    <string name="vertical">Vertical</string>
    <string name="columns">Columns</string>
    <string name="magnifier">Magnifier</string>
</resources>